tests/negative/regression/r22.orng
// r22.orng:6:27: error: cannot assign a value of type `Void` to type `Void`
//     const ident = { return }
//                          ^
// 
fn main() -> Int { 
    const ident = { return }
} 
